--- a/README
+++ b/README
@@ -7,7 +7,7 @@ See details at: http://satsky.spb.ru/codimension/codimensionEng.php
 
 REQUIREMENTS
 
-* Python 2.6 or higher
+* Python 2.5.1 or higher
 
 * PyQt4 4.7 or higher
     Ubuntu: python-qt4
@@ -16,7 +16,7 @@ REQUIREMENTS
     Ubuntu: python-qscintilla2
 
 * python-pygments-1.3.1 or higher
-
+    Ubuntu: python-pygments
 
 
 OTHER DEPENDENCIES
