Update with a bug fix

--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,8 @@
+XXXX XXX X  Sergey Satskiy <sergey.satskiy@gmail.com>
+
+* Bug fix: exception in the files browser if there is a syntactically incorrect
+  python file in it. Issue #266.
+
 2011 Sep 2  Sergey Satskiy <sergey.satskiy@gmail.com>
 
 * Prepared for first public release.
