--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,5 +1,6 @@
 XXXX XXX X  Sergey Satskiy <sergey.satskiy@gmail.com>
 
+* Improvement: provide a hint message in case if pymetrics failed. Issue #265.
 * Bug fix: exception in the files browser if there is a syntactically incorrect
   python file in it. Issue #266.
 
