--- a/pkg/pythonparser/debian/changelog
+++ b/pkg/pythonparser/debian/changelog
@@ -1,3 +1,10 @@
+codimension-parser (1.3-1) natty; urgency=low
+
+  * Source line numbers and column positions are now remembered for
+    class and function definitions.
+
+ -- Dmitry Kazimirov <dk@revl.org>  Tue, 13 Sep 2011 09:58:19 -0400
+
 codimension-parser (1.2-1) natty; urgency=low
 
   * Latest grammar fixes.
