--- a/pkg/codimension/debian/changelog
+++ b/pkg/codimension/debian/changelog
@@ -1,3 +1,12 @@
+codimension (1.1-1) natty; urgency=low
+
+  * New upstream version, which provides a hint message for
+    pymetrics failures.
+  * Syntax error exception in the file browser is now
+    correctly handled.
+
+ -- Dmitry Kazimirov <dk@revl.org>  Tue, 13 Sep 2011 10:13:49 -0400
+
 codimension (1.0-1) natty; urgency=low
 
   * Initial release.
