--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,4 +1,4 @@
-XXXX XXX XX  Sergey Satskiy <sergey.satskiy@gmail.com>
+2011 Oct 19  Sergey Satskiy <sergey.satskiy@gmail.com>
 
 * Adding support for commenting/uncommenting a single line or selected lines.
   Issue #11.
