--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,8 @@
+XXXX XXX XX  Sergey Satskiy <sergey.satskiy@gmail.com>
+
+* Bug fix: check that all the modified files are saved before letting a new
+  project to be created. Issue #273.
+
 2011 Oct 19  Sergey Satskiy <sergey.satskiy@gmail.com>
 
 * Adding support for commenting/uncommenting a single line or selected lines.
