--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,5 +1,6 @@
 XXXX XXX XX  Sergey Satskiy <sergey.satskiy@gmail.com>
 
+* Adding support for Alt+Up and Alt+Down hot keys
 * Switching history hot keys to Alt+PgDown and Alt+PgUp
 * Adding support for Alt+Left and Alt+Right hot keys
 * Bug fix: check that all the modified files are saved before letting a new
