--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,5 +1,7 @@
 XXXX XXX XX  Sergey Satskiy <sergey.satskiy@gmail.com>
 
+* Making Ctrl+F and Ctrl+R select the text to search even if the widget has
+  already been displayed. Issue #291.
 * Making Ctrl+X a synonym to Shift+Del. Issue #290.
 * Bug fix: F3/Shift F3 now work for the find/replace search string depending of
   what dialog was shown last. Issue #289.
