--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,5 +1,7 @@
 XXXX XXX XX  Sergey Satskiy <sergey.satskiy@gmail.com>
 
+* Bug fix in the replace implementation. Adding separate button 'replace and
+  move'. Issue #277.
 * Making Ctrl+F and Ctrl+R select the text to search even if the widget has
   already been displayed. Issue #291.
 * Making Ctrl+X a synonym to Shift+Del. Issue #290.
