--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,5 +1,6 @@
 XXXX XXX XX  Sergey Satskiy <sergey.satskiy@gmail.com>
 
+* New editor setting: auto remove trailing spaces on saving. Issue #300.
 * New setting: HOME moves the cursor to position 0 or to the first non space
   character. Issue #302.
 * Share the 'find' and 'replace what' search history. Issue #298.
