--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,5 +1,6 @@
 XXXX XXX XX  Sergey Satskiy <sergey.satskiy@gmail.com>
 
+* New feature: detecting files changed outside of codimension.
 * Bug fix: loading project from the filesystem browser checks if the opened
 * files are saved. Issue #295.
 * Some fixes in the replace implementation.
