--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,14 @@
+XXXX XXX XX  Sergey Satskiy <sergey.satskiy@gmail.com>
+
+* Bug fix: no more cursor jumping to another line if the feature of stripping
+  trailing spaces on save is switched on and a line has trailing spaces and the
+  cursor is at the end of the line.
+* Strip ability to have many non-nested dirs in a project.
+* New feature: project specific paths to resolve imports.
+* New feature: code completion (TAB, Ctrl + \, Ctrl + Space).
+* Dependency from the rope library is introduced.
+
+
 2011 Nov 29  Sergey Satskiy <sergey.satskiy@gmail.com>
 
 * Release 1.3
