Do not break the copy/paste buffer when a completion is inserted. Issue #310.

--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,5 +1,7 @@
 XXXX XXX XX  Sergey Satskiy <sergey.satskiy@gmail.com>
 
+* Bug fix: copy/paste buffer content was overwritten when the user selected an
+  item in a completion list. Issue #310.
 * Bug fix: exception while creating a new project
 * New feature: run a script in a separate terminal. The running parameters are
   cached and stored. The stored parameters are used to run the same script
