Add release label

--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,5 +1,6 @@
 XXXX XXX XX  Sergey Satskiy <sergey.satskiy@gmail.com>
 
+* Release 1.4
 * Bug fix: copy/paste buffer content was overwritten when the user selected an
   item in a completion list. Issue #310.
 * Bug fix: exception while creating a new project
