--- a/pkg/codimension/debian/changelog
+++ b/pkg/codimension/debian/changelog
@@ -1,3 +1,36 @@
+codimension (1.4-1) oneiric; urgency=low
+
+  * Dependency from the rope refactoring library is introduced.
+  * A stable upstream version that brings many improvements,
+    new features, and some bugfixes:
+  * Improvement: no unnecessary scrolling the line to jump to is
+    already visible.
+  * New feature: Ctrl+] searches for occurrences of the word
+    under the cursor.
+  * New feature: Ctrl+F3 initiates the search for the word under
+    the cursor without bringing up the find dialog.
+  * Ctrl+F and Ctrl+R keep the 'match case' and 'whole word' flags
+    intact between searches.
+  * New feature: run the project or the current script in a new
+    terminal. Script environment and parameters are remembered
+    between runs.
+  * New feature: go to definition (Ctrl+backslash)
+  * New feature: docstring for the identifier under the cursor
+    when Ctrl+F1 is pressed.
+  * Removed the ability to have multiple project roots.
+  * New feature: project specific paths to resolve imports.
+  * New feature: code completion (Tab, Ctrl+Space).
+  * Fixed buffer change notifications in the search result window.
+  * Bug fix: copy/paste buffer content was overwritten when an
+    item in a completion list was selected. Issue #310.
+  * Bug fix: exception while creating a new project.
+  * Bug fix: update tab history properly when jumping within
+    the same file.
+  * Fixed cursor positioning after automatic trailing whitespace
+    removal.
+
+ -- Dmitry Kazimirov <dk@revl.org>  Thu, 26 Jan 2012 19:51:25 -0500
+
 codimension (1.3-1) oneiric; urgency=low
 
   * New upstream version with lots of bug fixes and new features:
