Adding remapping of the Ctrl+N

--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,9 @@
+XXXX XXX XX  Sergey Satskiy <sergey.satskiy@gmail.com>
+
+* Ctrl+N (highlight the current word) is remapped to Ctrl+'
+
+
+
 2012 Jan 26  Sergey Satskiy <sergey.satskiy@gmail.com>
 
 * Release 1.4
