Ctrl+N for a new file, Ctrl+T has gone. Issue #323

--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,6 +1,8 @@
 XXXX XXX XX  Sergey Satskiy <sergey.satskiy@gmail.com>
 
-* Ctrl+N (highlight the current word) is remapped to Ctrl+'
+* Ctrl+' now highlight the current word, instead of Ctrl+N. Issue #323
+* Ctrl+N now creates a new file, instead of Ctrl+T. Issue #323
+* Ctrl+T is now not used for anything. Issue #323
 
 
 
