--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -4,6 +4,8 @@ XXXX XXX XX  Sergey Satskiy <sergey.satskiy@gmail.com>
 * Ctrl+N now creates a new file, instead of Ctrl+T. Issue #323
 * Ctrl+T is now not used for anything. Issue #323
 * Bug fix: no more exception while building a completion list. Issue #321
+* Bug fix: removing from FS tree via a context menu did not update the view.
+  Issue #325
 
 
 
