--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -16,6 +16,7 @@ XXXX XXX XX  Sergey Satskiy <sergey.satskiy@gmail.com>
 * New feature: the editor context menu
 * New feature: Alt+U tp jump to the first line of the current function or
   class. Issue #316
+* New feature: dumb line counter for the buffer. Issue #107
 
 
 2012 Jan 26  Sergey Satskiy <sergey.satskiy@gmail.com>
