Updating the release date

--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,4 +1,4 @@
-XXXX XXX XX  Sergey Satskiy <sergey.satskiy@gmail.com>
+2012 May 20  Sergey Satskiy <sergey.satskiy@gmail.com>
 
 * Release 1.5
 * Ctrl+' now highlight the current word, instead of Ctrl+N. Issue #323
