--- a/pkg/pythonparser/debian/changelog
+++ b/pkg/pythonparser/debian/changelog
@@ -1,3 +1,10 @@
+codimension-parser (1.4-1) precise; urgency=low
+
+  * Upstream changes: Bug fix: make parseable the input where
+    the last line is a comment and has no EOL.
+
+ -- Dmitry Kazimirov <dk@revl.org>  Mon, 21 May 2012 13:51:31 -0400
+
 codimension-parser (1.3-2) oneiric; urgency=low
 
   * Release of version 1.3 for the oneiric series.
