Updated codimension changelogs and spec package version. Issue #327

--- a/pkg/codimension/debian/changelog
+++ b/pkg/codimension/debian/changelog
@@ -1,3 +1,30 @@
+codimension (1.5) precise; urgency=low
+
+  * Upstream changes for release 1.5:
+  * Ctrl+' replaces Ctrl+N to highlight the current word. Issue #323
+  * Ctrl+N replaces Ctrl+T to create a new file. Issue #323
+  * Ctrl+T is not used for anything now. Issue #323
+  * Bug fix for exception while building a completion list. Issue #321
+  * Bug fix to update the FS view after file/dir removal via the
+    context menu.  Issue #325
+  * Bug fix to make it possible to create a nested project directory
+  * Bug fix: do not show the 'reload' menu item for deleted files
+  * Bug fix for Save As when the target file is open in another tab.
+    Issue #317
+  * Bug fix for updating the project properties when the script
+    name is empty.
+  * Python built-in functions are now highlighted as keywords.
+  * File encoding is displayed and can be changed via a context menu.
+    Issue #69
+  * New feature: the editor context menu.
+  * New feature: Alt+U to jump to the first line of the current
+    function or class. Issue #316
+  * New feature: line counter for the buffer. Issue #107
+  * Open project via the OS file selection dialog (Ctrl+Shift+O)
+  * New feature: the main menu.
+
+ -- Dmitry Kazimirov <dk@revl.org>  Mon, 21 May 2012 13:56:04 -0400
+
 codimension (1.4-1) oneiric; urgency=low
 
   * Dependency from the rope refactoring library is introduced.
