--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,5 +1,10 @@
 2012 XXX XX  Sergey Satskiy <sergey.satskiy@gmail.com>
 
+* New feature: PythonTidy integration and diff viewers
+
+
+2012 XXX XX  Sergey Satskiy <sergey.satskiy@gmail.com>
+
 * Release 1.5
 * Ctrl+' now highlight the current word, instead of Ctrl+N. Issue #323
 * Ctrl+N now creates a new file, instead of Ctrl+T. Issue #323
