--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -2,7 +2,7 @@
 
 * New feature: PythonTidy integration and diff viewers
 * New Project button is removed from the main window toolbar
-* New feature: copying a diagram to the clipboard
+* New feature: copying a diagram to the clipboard (main menu and Ctrl+C)
 * New feature: new file template support for the case when no new
   project is loaded. UI to create/edit/delete new file templates added.
 
