--- a/pythonparser/ChangeLog
+++ b/pythonparser/ChangeLog
@@ -1,3 +1,7 @@
+XXXX XXX XX  Sergey Satskiy <sergey.satskiy@gmail.com>
+
+* Collect the input stream offset for the most of the items.
+
 2012 May 13  Sergey Satskiy <sergey.satskiy@gmail.com>
 
 * Prepared for release v.1.4
