--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -18,6 +18,9 @@
   viewers
 * New feature: profiling support: representing the results as a graphics
   diagram and as a table
+* New feature: exporting profiling and imports diagrams in png format
+* Improvement of import diagrams: performance; tooltips for modules;
+  better text alignment; better recognition of the system modules
 
 
 2012 XXX XX  Sergey Satskiy <sergey.satskiy@gmail.com>
