Adding release date and version

--- a/pythonparser/ChangeLog
+++ b/pythonparser/ChangeLog
@@ -1,5 +1,6 @@
-XXXX XXX XX  Sergey Satskiy <sergey.satskiy@gmail.com>
+2012 Sep 17  Sergey Satskiy <sergey.satskiy@gmail.com>
 
+* Prepared for release v.1.5
 * Collect the input stream offset for the most of the items.
 
 2012 May 13  Sergey Satskiy <sergey.satskiy@gmail.com>
