--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,5 +1,6 @@
-XXXX XXX XX Sergey Satskiy <sergey.satskiy@gmail.com>
+2012 Oct 14 Sergey Satskiy <sergey.satskiy@gmail.com>
 
+* Release 1.7
 * Shift+Tab intercepted properly in the editor window in Windows based X
   Server. Issue #334
 * Early logging on Windows based X Server could lead to crashes so some
