--- a/pkg/pythonparser/debian/changelog
+++ b/pkg/pythonparser/debian/changelog
@@ -1,3 +1,9 @@
+codimension-parser (1.5-2) quantal; urgency=low
+
+  * Release for the Ubuntu quantal series.
+
+ -- Dmitry Kazimirov <dk@revl.org>  Wed, 31 Oct 2012 01:30:14 -0400
+
 codimension-parser (1.5-1) precise; urgency=low
 
   * New: input stream offsets for most of the items.
