--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,5 +1,7 @@
 XXXX XXX XX Sergey Satskiy <sergey.satskiy@gmail.com>
 
+* Do not loose the current editor position when there was an incremental
+  search on a tab and then another tab is closed.
 * Prevent loosing selection in case switching between history positions
   if nothing has been changed in the required buffer.
 * Have the find-in-files dialog interruptible at the stage of building
