Fix: menu->Tools->Pylint for project led to an exception. Issue #346

--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,5 +1,7 @@
 XXXX XXX XX Sergey Satskiy <sergey.satskiy@gmail.com>
 
+* Fix: main menu -> tools -> pylint for project led to an exception.
+  Issue #346.
 * Sometimes pylint reports absolute paths so it is respected now.
 * When completion is called and a temporary rope project is created,
   exclude all the subdirectories where there are no __init__.py[3] files.
