--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,12 +1,14 @@
 XXXX XXX XX Sergey Satskiy <sergey.satskiy@gmail.com>
 
+* Bug fix: files with national characters with not-recognized type could
+  lead to unpredicted behaviour (up to core dumps). Issue #348
 * Bug fix: tab expanding (replace all) did not replace everything.
 * Bug fix: main menu -> tools -> pylint for project led to an exception.
   Issue #346.
 * Sometimes pylint reports absolute paths so it is respected now.
 * When completion is called and a temporary rope project is created,
   exclude all the subdirectories where there are no __init__.py[3] files.
-  This mitigate a setup with a network home dir ( or network file location)
+  This mitigate a setup with a network home dir (or network file location)
   in a directory where there are lots of subdirectories
 * Add a shortcut in the 'Open file' dialog to the directory where the
   current tab file (if so) is.
