--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,5 +1,6 @@
 XXXX XXX XX Sergey Satskiy <sergey.satskiy@gmail.com>
 
+* New feature: IDE-wide pylintrc support. Issue #344.
 * Performance improvement and bug fixes in the file content trees, e.g
   file outline browser, project files browser etc.
 * Bug fix: files with national characters with not-recognized type could
