--- a/pythonparser/ChangeLog
+++ b/pythonparser/ChangeLog
@@ -1,3 +1,7 @@
+2013 Jan XX  Sergey Satskiy <sergey.satskiy@gmail.com>
+
+* Bug fix: module docstring if it is the only file item is recognised properly
+
 2012 Sep 17  Sergey Satskiy <sergey.satskiy@gmail.com>
 
 * Prepared for release v.1.5
