--- a/pkg/pythonparser/debian/changelog
+++ b/pkg/pythonparser/debian/changelog
@@ -1,3 +1,12 @@
+codimension-parser (1.6-1) unstable; urgency=low
+
+  * Release for Debian unstable
+  * Fix: docstrings comprised of many string literal parts are properly recognized.
+  * Fix: module docstring is recognized even if it is the only file content.
+  * Minor code cleanups targeting the parser performance.
+
+ -- Sergey <sergey.satskiy@gmail.com>  Fri, 18 Jan 2013 23:29:15 -0500
+
 codimension-parser (1.5-1) precise; urgency=low
 
   * New: input stream offsets for most of the items.
