--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,5 +1,6 @@
-XXXX XXX XX Sergey Satskiy <sergey.satskiy@gmail.com>
+2013 Jan 20 Sergey Satskiy <sergey.satskiy@gmail.com>
 
+* Release 1.8
 * Bug fix: running python tidy with settings led to an exception.
 * Improvement: focus is moved to the current editor widget automatically when
   it is received by the editor tab widget. Issue #350.
