--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,5 +1,7 @@
 XXXX XXX XX Sergey Satskiy <sergey.satskiy@gmail.com>
 
+* Main menu and the text editor context menu now have 'downdload and show'
+  item.
 * Main menu 'tab' now has 'highlight in...' items.
 * Bug fix: 'highlight in file system browser' did not work if it was not a
   project file.
