--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,4 +1,4 @@
-XXXX XXX XX Sergey Satskiy <sergey.satskiy@gmail.com>
+2013 Jun 02 Sergey Satskiy <sergey.satskiy@gmail.com>
 
 * Release 1.9
 * Initial implementation of the debugger.
