Extra long signatures in a context help do not limit min window width. Issue #386

--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -2,6 +2,8 @@ XXXX XXX XX Sergey Satskiy <sergey.satskiy@gmail.com>
 
 * Fix: Extra commas in the 'author' field when a new project is created on
   Ubuntu. Issue #387
+* Fix: extra long signatures in a context help do not limit min window width.
+  Issue #386
 
 2013 Jun 18 Sergey Satskiy <sergey.satskiy@gmail.com>
 
