--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,8 @@
+2013 XXX XX Sergey Satskiy <sergey.satskiy@gmail.com>
+
+* Better calltips for PyQt objects
+
+
 2013 Jun 29 Sergey Satskiy <sergey.satskiy@gmail.com>
 
 * Release 2.0.2
